--- a/planing.html
+++ b/planing.html
@@ -15,9 +15,9 @@
              <h3>Objetivos Especificos</h3>
 
              <ul>
-                 <li>Analizar</li>
-                  <li>Comprender</li>
-                  <li>Aplicar</li>
+                 <li>Analizar que es html5</li>
+                  <li>Comprender la utilizacion de html5</li>
+                  <li>Aplicar el lenguaje de progracion html5 en el diseño del OVI</li>
              </ul>
       <h2>¿Que es html5?</h2>
 
