--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                    <a href="autoevaluacion1.html">Autoevaluacion 1</a>
                    <a href="autoevaluacion2.html">Autoevaluacion 2</a>
                 </div>
-                <li><a href="autor.html">Autor</a></li>
+                <li><a href="Autor.html">Autor</a></li>
              </li>
              
           </ul>
