--- a/Autor.html
+++ b/Autor.html
@@ -19,23 +19,23 @@
     </header>
     <nav>
         <ul class="menu">
-            <li><a href="#">Inicio</a></li>
+            <li><a href="inicio.html">Inicio</a></li>
             <li class="boton"><a href="#">Conceptos</a>
                <div class="listaDesplegable">
-                 <a href="Concepto1.html">concepto 1</a>
-                 <a href="Concepto2.html">concepto 2</a>
+                 <a href="concepto1.html">concepto 1</a>
+                 <a href="concepto2.html">concepto 2</a>
                </div>
            </li>
            <li class="boton"><a href="#">Recursos</a>
               <div class="listaDesplegable">
-              <a href="Recursos1.html">Recursos 1</a>
-              <a href="Recursos2.html">Recursos 2</a>
+              <a href="recursos1.html">Recursos 1</a>
+              <a href="recursos2.html">Recursos 2</a>
               </div>
            </li>
            <li class="boton"><a href="#">Autoevaluacion</a>
               <div class="listaDesplegable">
-                 <a href="Autoevaluacion1.html">Autoevaluacion 1</a>
-                 <a href="Autoevaluacion2.html">Autoevaluacion 2</a>
+                 <a href="autoevaluacion1.html">Autoevaluacion 1</a>
+                 <a href="autoevaluacion2.html">Autoevaluacion 2</a>
              </div>
            </li>
            <li><a href="Autor.html">Autor</a></li>
