--- a/recursos1.html
+++ b/recursos1.html
@@ -49,7 +49,7 @@
      <br>
      <h1>El gran libro de html5 y css3</h1>
       <br>
-      <iframe src="pdf/librohtml5.pdf" frameborder="0" width="100%" height="400"></iframe>
+      <iframe src="PDF/librohtml5.pdf" frameborder="0" width="100%" height="400"></iframe>
       <br>
       <br>
       <br>
