--- a/autoevaluacion1.html
+++ b/autoevaluacion1.html
@@ -36,6 +36,7 @@
               <div class="listaDesplegable">
                  <a href="autoevaluacion1.html">Autoevaluacion 1</a>
                  <a href="autoevaluacion2.html">Autoevaluacion 2</a>
+                 <a href="autoevaluacionsitio.html">Autoevaluacion Sitio</a>
              </div>
            </li>
            <li><a href="Autor.html">Autor</a></li>
@@ -43,6 +44,8 @@
     </nav>
     <section>
       <h1>Autoevaluacion 1</h1>
+      <p>Resuelva la siguiente sopa de letras</p>
+      <iframe width="795" height="690" frameborder="0" src="https://es.educaplay.com/juego/7813144-lenguaje_html5.html"></iframe>
   </section>
 
     <footer>
