--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                   <div class="listaDesplegable">
                      <a href="autoevaluacion1.html">Autoevaluacion 1</a>
                      <a href="autoevaluacion2.html">Autoevaluacion 2</a>
+                     <a href="autoevaluacionsitio.html">Autoevaluacion Sitio</a>
                   </div>
              <li><a href="Autor.html">Autor</a></li>
              </li>
@@ -56,9 +57,10 @@
                       <p>-El objetivo de este OVI es el de dar a conocer a los usuarios un sitio de informacion
                          basica sobre el contenido html5.
                      </p>
-                 <h1>Tematicas</h1>
-                 <p>
-                     <img src="html5.png" alt="logo html5">
+                 <h1>Tematica</h1>
+                  <p> la tematica se trata de como implementar la estructura basica de HTML5 a la hora de diseñar sitios web </p>
+                 <p> 
+                     <img width="700" src="html5.png" alt="logo html5">
                  </p>
              </td>
              <td>
